[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "beehivemqtt"
version = "1.0.0"
description = "Native MQTT 3.1.1 broker for MicroPython and CPython"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [{name = "mateuszsury"}]
keywords = ["mqtt", "broker", "micropython", "esp32", "rp2040", "iot", "embedded", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Networking",
    "Topic :: Communications",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/mateuszsury/BeehiveMQTT"
Documentation = "https://github.com/mateuszsury/BeehiveMQTT/blob/main/docs/api.md"
Repository = "https://github.com/mateuszsury/BeehiveMQTT"
"Bug Tracker" = "https://github.com/mateuszsury/BeehiveMQTT/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
